# jcanvas

./: CMakeLists.txt  Defines.cmake  README  README.md  TODO  coverage.sh  jcanvas.pc.in
algebra/: CMakeLists.txt
algebra/cmake/: FindBpg.cmake  FindJmixin.cmake  FindNanaX.cmake  FindTiff.cmake  GraphicBinds.cmake
algebra/examples/: CMakeLists.txt  example.cpp
algebra/src/: jcircle.cpp  jinsets.cpp  jline.cpp  jmatrix.cpp  jpoint.cpp  jrect.cpp  jvector.cpp
algebra/src/include/jcanvas/algebra/: jcircle.h  jinsets.h  jline.h  jmatrix.h  jpoint.h  jrect.h
algebra/tests/: CMakeLists.txt  jvector_basics.cpp
core/: CMakeLists.txt
core/cmake/: Binds.cmake  FindBpg.cmake  FindDispmanXPi.cmake  FindEgl.cmake  FindEglPi.cmake  FindFlaschen.cmake  FindFlif.cmake  FindJasper.cmake  FindJx.cmake  FindNanaX.cmake  FindOpenVg.cmake  FindOpenVgPi.cmake  FindTiff.cmake  GraphicBinds.cmake  ImageProviders.cmake  Providers.cmake
core/examples/: 2048.cpp  CMakeLists.txt  ants.cpp  ball.cpp  bitmask.cpp  breakout.cpp  cad.cpp  cairo.cpp  caster.cpp  chip8.cpp  coloralpha.cpp  colorchooser.cpp  convexhull.cpp  doom.cpp  drawimage.cpp  drawtypes.cpp  dummy.cpp  events.cpp  fire.cpp  fly.cpp  fullscreen.cpp  function.cpp  graph.cpp  hough.cpp  kmeans.cpp  mandelbrot.cpp  minecraft.cpp  mines.cpp  mouse.cpp  newvox.cpp  noise.cpp  ortho.cpp  pacman.cpp  particles.cpp  platform.cpp  porter.cpp  primitives.cpp  radar.cpp  raster.cpp  raycaster1.cpp  (+17 more)
core/examples/assets/maps/: level-00.map
core/examples/images/: image.heic  image.mjpeg  image.pcx  image.ppm  image.xbm
core/src/: japplication.cpp  jbufferedimage.cpp  jcolor.cpp  jenum.cpp  jeventmanager.cpp  jeventobject.cpp  jfont.cpp  jgraphics.cpp  jhslcolorspace.cpp  jimage.cpp  jindexedimage.cpp  jkeyevent.cpp  jkeylistener.cpp  jkeymap.cpp  jlistener.cpp  jmouseevent.cpp  jmouselistener.cpp  jraster.cpp  jresources.cpp  jwindow.cpp  jwindowadapter.cpp  jwindowevent.cpp  jwindowlistener.cpp
core/src/binds/allegro5/: bind.cpp
core/src/binds/caca/: bind.cpp
core/src/binds/directfb/: bind.cpp
core/src/binds/dispmanx/: bind.cpp
core/src/binds/dispmanx-pi/: bind.cpp
core/src/binds/drm/: bind.cpp
core/src/binds/dummy/: bind.cpp
core/src/binds/efl/: bind.cpp
core/src/binds/egl/: bind.cpp
core/src/binds/egl-pi/: bind.cpp
core/src/binds/fb/: bind.cpp
core/src/binds/flaschen/: bind.cpp
core/src/binds/gl/: bind.cpp
core/src/binds/gtk3/: bind.cpp
core/src/binds/include/: nativewindow.h
core/src/binds/jx/: bind.cpp
core/src/binds/nanax/: bind.cpp
core/src/binds/openvg/: bind.cpp
core/src/binds/openvg-pi/: bind.cpp
core/src/binds/qt5/: bind.cpp
core/src/binds/sdl2/: bind.cpp
core/src/binds/sfml2/: bind.cpp
core/src/binds/vdpau/: bind.cpp
core/src/binds/vnc/: bind.cpp
core/src/binds/wayland/: bind.cpp  bind.h
core/src/binds/xcb/: bind.cpp
core/src/binds/xlib/: bind.cpp
core/src/include/jcanvas/core/: japplication.h  jbufferedimage.h  jcolor.h  jenum.h  jeventmanager.h  jeventobject.h  jfont.h  jgraphics.h  jguilib.h  jhslcolorspace.h  jimage.h  jindexedimage.h  jkeyevent.h  jkeylistener.h  jkeymap.h  jlistener.h  jmatrix.h  jmouseevent.h  jmouselistener.h  jraster.h  jresources.h  jvector.h  jwindow.h  jwindowadapter.h  jwindowevent.h  jwindowlistener.h
core/src/providers/: avifimage.cpp  bmpimage.cpp  bpgimage.cpp  flifimage.cpp  gifimage.cpp  heifimage.cpp  icoimage.cpp  jp2000image.cpp  jp2image.cpp  jpgimage.cpp  mjpegimage.cpp  pcximage.cpp  pngimage.cpp  ppmimage.cpp  svgimage.cpp  tgaimage.cpp  tiffimage.cpp  webpimage.cpp  xbmimage.cpp  xpmimage.cpp
core/src/providers/include/: avifimage.h  bitmap.h  bmpimage.h  bpgimage.h  flifimage.h  gifimage.h  heifimage.h  icoimage.h  jp2000image.h  jpgimage.h  mjpegimage.h  pcximage.h  pngimage.h  ppmimage.h  svgimage.h  tgaimage.h  tiffimage.h  webpimage.h  xbmimage.h  xpmimage.h
core/tests/: CMakeLists.txt  jcolor_basics.cpp
widgets/: CMakeLists.txt
widgets/cmake/: FindDispmanX.cmake  FindEgl.cmake  FindFlif.cmake  ImageProviders.cmake
widgets/examples/: CMakeLists.txt  Makefile  border.cpp  calc.cpp  clip.cpp  columnlayout.cpp  custom.cpp  dialogs.cpp  flatbutton.cpp  layouts.cpp  menu.cpp  mhp.cpp  rowlayout.cpp  scroll.cpp  sort.cpp  tabs.cpp  texts.cpp  widgets.cpp
widgets/examples/images/: image-ascii.ppm  image.bpg  image.flif  image.jp2  image.tga  image.tif  image.xpm
widgets/src/: jactionevent.cpp  jactionlistener.cpp  jadjustmentevent.cpp  jadjustmentlistener.cpp  janimation.cpp  jbackground.cpp  jbeveledrectangleborder.cpp  jborder.cpp  jborderlayout.cpp  jbutton.cpp  jcalendardialog.cpp  jcardlayout.cpp  jcheckbutton.cpp  jcheckbuttongroup.cpp  jcolumnlayout.cpp  jcomponent.cpp  jcomponentevent.cpp  jcomponentlistener.cpp  jcontainer.cpp  jcontainerevent.cpp  jcontainerlistener.cpp  jcoordinatelayout.cpp  jdialog.cpp  jfilechooserdialog.cpp  jflatimage.cpp  jflowlayout.cpp  jfocusevent.cpp  jfocuslistener.cpp  jframe.cpp  jgridbaglayout.cpp  jgridlayout.cpp  jicon.cpp  jimagebackground.cpp  jimageborder.cpp  jinputdialog.cpp  jitemcomponent.cpp  jkeyboarddialog.cpp  jlayout.cpp  jlistbox.cpp  jloweredbeveledrectangleborder.cpp  (+34 more)
widgets/src/include/jcanvas/widgets/: jactionevent.h  jactionlistener.h  jadjustmentevent.h  jadjustmentlistener.h  janimation.h  jbackground.h  jbeveledrectangleborder.h  jborder.h  jborderlayout.h  jbutton.h  jcalendardialog.h  jcardlayout.h  jcheckbutton.h  jcheckbuttongroup.h  jcolumnlayout.h  jcomponent.h  jcomponentevent.h  jcomponentlistener.h  jcontainer.h  jcontainerevent.h  jcontainerlistener.h  jcoordinatelayout.h  jdialog.h  jfilechooserdialog.h  jflatimage.h  jflowlayout.h  jfocusevent.h  jfocuslistener.h  jframe.h  jgridbaglayout.h  jgridlayout.h  jicon.h  jimagebackground.h  jimageborder.h  jinputdialog.h  jitemcomponent.h  jkeyboarddialog.h  jlayout.h  jlistbox.h  jloweredbeveledrectangleborder.h  (+34 more)
widgets/tests/: CMakeLists.txt  jtheme_basics.cpp
