cmake_minimum_required (VERSION 3.0)

macro(module_test)
  add_executable(${ARGV0}_example
    ${ARGV0}.cpp
  )

  include_directories(
    "../core/src/include"
  )

  target_link_libraries(${ARGV0}_example PUBLIC
    jcanvas-core
  )
endmacro()

file(COPY assets DESTINATION .)
file(COPY images DESTINATION .)
file(COPY pics DESTINATION .)
file(COPY roms DESTINATION .)
file(COPY objs DESTINATION .)
file(COPY fly DESTINATION .)

module_test(2048)
module_test(ants)
module_test(ball)
module_test(bitmask)
module_test(breakout)
module_test(cad)
#module_test(cairo)
module_test(caster)
module_test(chip8)
module_test(coloralpha)
module_test(colorchooser)
module_test(convexhull)
module_test(doom)
module_test(drawimage)
module_test(drawtypes)
module_test(dummy)
module_test(events)
module_test(fire)
module_test(fullscreen)
module_test(function)
module_test(graph)
module_test(hough)
module_test(kmeans)
module_test(mandelbrot)
module_test(minecraft)
module_test(mines)
module_test(mouse)
module_test(newvox)
module_test(noise)
module_test(ortho)
module_test(pacman)
module_test(platform)
module_test(porter)
module_test(primitives)
module_test(radar)
module_test(raster)
module_test(raycaster1)
module_test(raycaster2)
module_test(raycaster3)
module_test(raytracer)
module_test(rotateimage)
module_test(signal)
module_test(skull)
module_test(som)
module_test(stress)
module_test(surface)
module_test(swarm)
module_test(tank)
module_test(terrain)
module_test(tetris)
module_test(text)
module_test(tree)
module_test(tv)
module_test(watch)
module_test(particles)
module_test(fly)
